* 2014-07-07 - tobias.friedrich@open-xchange.com

 - Fix for bug 33412: Use larger chunks when performing multipart uploads to S3 stores
 - Fix for bug 33422: Made the setting "com.openexchange.filestore.s3.[filestoreID].pathStyleAccess" officially available in the 
                      configuration file "filestore-s3.properties"  

* 2014-07-07 - thorben.betten@open-xchange.com

 - Attempt to fix bug 33200: Clear preview cache asynchronously

* 2014-07-03 - jan.bauerdick@open-xchange.com

 - Fix for bug 33424: Add mpasswd file to list of properties files

* 2014-06-30 - lars.hoogestraat@open-xchange.com
 
 - Fix for bug #33314: Removed access restrictions which are not used

* 2014-06-25 - marcus.klein@open-xchange.com

 - Fix for bug 32860: Detect lousy clients writing always the same attribute values to the user object and avoid updating these values in
   the storage layer.

* 2014-06-25 - jan.bauerdick@open-xchange.com

 - Fix for bug 33004: Check if user has more permissions than to write own objects

* 2014-06-25 - tobias.friedrich@open-xchange.com

 - Fix for bug 33273: Switched to a root bucket name per S3 filestore registration and separate context data using fixed prefixes

* 2014-06-24 - marcus.klein@open-xchange.com

 - Fix for bug 33258: Only allow priority values low, normal and high for tasks.

* 2014-06-24 - tobias.friedrich@open-xchange.com

 - Fix for bug 33184: Added recovery if quota gets exceeded during server-side execution of optimized synchronization results  

* 2014-06-22 - thorben.betten@open-xchange.com

 - Fix for bug 33219: Proper access to config cascade to orderly acquire scope-cascaded quota setting
 - Fix for bug 33208: Load modules information only if login's result code does signal a success (and not a redirect or a failure)

* 2014-06-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 32323: Introduced "acknowledge" parameter for EDIT actions to prevent implicit client-side acknowledgments of unknown files  
